-hmmls: New component.
-fuzznuc: New component.
-wu-blast2bsml: Added parameter filter_hsps_for_stats which will use only HSPs that contribute to the best Sum(P) when calculating Seq-pair-alignment %identity/coverage/similarity values.
chado2bsml: Added --databaselist parameter so a list of databases can be passed in.
-hmmpfam: Added molecule type parameters. Added option to skip htab generation.
-pangenome_do_analysis.pl: Removed this script as it's functionality has been rolled into pangenome_make_table and pangenome_blast_parse.
-pangenome_blast_parse.pl: Fixed a major bug where the coverage parameter from the last HSP was being used for the entire hit. Now it uses the value attached to the Seq-pair-alignment for coverage and similarity.
-pathway_tools_input: added compoonent to generate pathway tools input files from a chado database
-Pfunc [annotation_collection_to_bsml]: will now print different parent molecules to different output bsml files
-pipeline_summary: Reduced runtime and will now order loci based on end3 (within one molecule)

ergatis-v2r11b1
---------------
-fixed pipeline layout save warning error
-fixed bug where a string of s characters weren't allowed as a label
-update of JOCs comparative pipeline
-genbank2bsml: improved identifier support and including systematic_id tag
-genemark2bsml: added example of expected input file
-gff2bsml: added multiple options and a bugfix
-added support for gzipped bsml to jaccard component
-pangenome R scripts: Added new graphs with error bars. One set has the sampled points and one has only the error bars and medians.
-PFunc: CommonName annotation tries to remove parens from long common names
-added pipeline_submission_queue and pipeline_submission_project options to ergatis.ini file. These options control how pipelines are submitted as jobs (and are only used when the submit_pipelines_as_jobs = 1 [default = 0])
-File::OpenFile: added concat option and also now uses Carp for printing error messages