@@ -12,6 +12,7 @@ next
 -wu-blast2bsml: Added parameter filter_hsps_for_stats which will use only HSPs that contribute to the best Sum(P) when calculating Seq-pair-alignment %identity/coverage/similarity values.
 chado2bsml: Added --databaselist parameter so a list of databases can be passed in.
 -hmmpfam: Added molecule type parameters. Added option to skip htab generation.
+-HmmTools.pm: changes to parsing for use with LDHmmer v1.5.4
 -pangenome_do_analysis.pl: Removed this script as it's functionality has been rolled into pangenome_make_table and pangenome_blast_parse.
 -pangenome_blast_parse.pl: Fixed a major bug where the coverage parameter from the last HSP was being used for the entire hit. Now it uses the value attached to the Seq-pair-alignment for coverage and similarity.
 -pathway_tools_input: added compoonent to generate pathway tools input files from a chado database
